--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-	"name": "nvm-manager",
-	"version": "1.0.0",
-	"main": "main.js",
-	"license": "MIT",
-	"scripts": {
-		"dev": "cross-env NODE_ENV=development electron .",
-		"app": "electron-builder"
-	},
-	"devDependencies": {
-		"cross-env": "^10.0.0",
-		"electron": "^26.6.10",
-		"electron-builder": "^24.6.4"
-	},
-	"build": {
-		"productName": "NVM-MANAGER",
-		"nsis": {
-			"oneClick": false,
-			"allowToChangeInstallationDirectory": true
-		},
-		"win": {
-			"icon": "assets/icons/win/icon.png"
-		}
-	}
+  "name": "nvm-manager",
+  "version": "1.0.0",
+  "main": "main.js",
+  "license": "MIT",
+  "author": "gege",
+  "description": "description",
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development nodemon --exec electron . --watch ./ --ext .js,.html,.css,.vue",
+    "app": "electron-builder"
+  },
+  "devDependencies": {
+    "cross-env": "^10.0.0",
+    "electron": "^26.6.10",
+    "electron-builder": "^24.6.4",
+    "nodemon": "^3.1.10"
+  },
+  "build": {
+    "productName": "NVM-MANAGER",
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    },
+    "win": {
+      "icon": "assets/icons/win/icon.png"
+    }
+  }
 }
